backend/clean_error.txt
C:\Users\shlok\OneDrive\Desktop\Smart Study Planner with AI\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/routes/syllabus.ts(17,22): error TS2349: This expression is not callable.
  Type 'typeof import("C:/Users/shlok/OneDrive/Desktop/Smart Study Planner with AI/backend/node_modules/pdf-parse/dist/pdf-parse/cjs/index")' has no call signatures.

    at createTSError (C:\Users\shlok\OneDrive\Desktop\Smart Study Planner with AI\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\shlok\OneDrive\Desktop\Smart Study Planner with AI\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\shlok\OneDrive\Desktop\Smart Study Planner with AI\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\shlok\OneDrive\Desktop\Smart Study Planner with AI\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\shlok\OneDrive\Desktop\Smart Study Planner with AI\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1936:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\shlok\OneDrive\Desktop\Smart Study Planner with AI\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2349 ]
}
